v1.11.x/connectors/database/unity-catalog.mdx
---
title: Unity Catalog Connector | OpenMetadata Data Governance
description: Learn how to connect Unity Catalog to OpenMetadata with our comprehensive connector guide. Setup instructions, configuration tips, and metadata integrat...
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import ConfigureIngestion from '/snippets/connectors/database/configure-ingestion.mdx'
import AdvancedConfiguration from '/snippets/connectors/database/advanced-configuration.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'
import Related from '/snippets/v1.11.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/databrick.webp'
name="Unity Catalog"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "dbt", "Sample Data", "Owners", "Tags", "Auto-Classification"]}
unavailableFeatures={["Stored Procedures"]} />
In this section, we provide guides and references to use the Unity Catalog connector.

<Info>
**Supported Authentication Types:**
- **Personal Access Token** — Generated token from your Databricks workspace (User Settings → Developer → Access Tokens)
- **Databricks OAuth** — OAuth2 Machine-to-Machine authentication using Service Principal credentials
- **Azure AD Setup** — Azure Active Directory authentication using Service Principal for Azure Databricks workspaces
</Info>

Configure and schedule Unity Catalog metadata workflow from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Data Quality](/v1.11.x/how-to-guides/data-quality-observability/quality)
- [Lineage](/v1.11.x/connectors/ingestion/lineage)
- [dbt Integration](/v1.11.x/connectors/database/dbt)
- [Troubleshooting](/v1.11.x/connectors/database/unity-catalog/troubleshooting)

<ExternalIngestionDeployment />
## Requirements
### Permission Requirement
To enable full functionality of metadata extraction, profiling, usage, and lineage features in OpenMetadata, the following permissions must be granted to the relevant users in your Databricks environment.
### Metadata and Profiling Permissions
These permissions are required on the catalogs, schemas, and tables from which metadata and profiling information will be ingested.
```sql
GRANT USE CATALOG ON CATALOG <catalog_name> TO `<user>`;
GRANT USE SCHEMA ON SCHEMA <schema_name> TO `<user>`;
GRANT SELECT ON TABLE <table_name> TO `<user>`;
```
Ensure these grants are applied to all relevant tables for metadata ingestion and profiling operations.
### Usage
These permissions enable OpenMetadata to extract query history for usage statistics.
```sql
GRANT SELECT ON SYSTEM.QUERY.HISTORY TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.query TO `<user>`;
```
### Lineage
These permissions enable OpenMetadata to extract table and column-level lineage from Databricks system tables.
```sql
GRANT SELECT ON system.access.table_lineage TO `<user>`;
GRANT SELECT ON system.access.column_lineage TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.access TO `<user>`;
```
For external table lineage (linking tables to their storage locations), the following is also required:
```sql
GRANT SELECT ON system.information_schema.tables TO `<user>`;
```
### Tags
These permissions enable OpenMetadata to extract Unity Catalog tags from catalogs, schemas, tables, and columns.
```sql
GRANT SELECT ON <catalog_name>.information_schema.catalog_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.schema_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.table_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.column_tags TO `<user>`;
```
<Tip>
Adjust &lt;user&gt;, &lt;catalog_name&gt;, &lt;schema_name&gt;, and &lt;table_name&gt; according to your specific deployment and security requirements.
</Tip>
## Metadata Ingestion
<MetadataIngestionUi connector={"Unity Catalog"} selectServicePath={"/public/images/connectors/unity-catalog/select-service.png"} addNewServicePath={"/public/images/connectors/unity-catalog/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/unity-catalog/service-connection.png"} />
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **Host and Port**: Enter the fully qualified hostname and port number for your Databricks deployment in the Host and Port field.
- **Authentication Type**: Choose one of the following authentication methods:
  - **Personal Access Token**: Provide the token generated from your Databricks workspace (User Settings → Developer → Access Tokens).
  - **Databricks OAuth**: Provide the Service Principal `Client ID` and `Client Secret` created in your Databricks Account Console.
  - **Azure AD Setup**: Provide the `Azure Client ID`, `Azure Client Secret`, and `Azure Tenant ID` from your Azure Active Directory Service Principal.
- **HTTP Path**: Databricks compute resources URL.
- **connectionTimeout**: The maximum amount of time (in seconds) to wait for a successful connection to the data source. If the connection attempt takes longer than this timeout period, an error will be returned.
- **Catalog**: Catalog of the data source(Example: hive_metastore). This is optional parameter, if you would like to restrict the metadata reading to a single catalog. When left blank, OpenMetadata Ingestion attempts to scan all the catalog.
- **DatabaseSchema**: databaseSchema of the data source. This is optional parameter, if you would like to restrict the metadata reading to a single databaseSchema. When left blank, OpenMetadata Ingestion attempts to scan all the databaseSchema.
</Step>
<AdvancedConfiguration />
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>

<Related />
