v2.0.x-SNAPSHOT/connectors/database/unity-catalog.mdx
---
title: Unity Catalog Connector | OpenMetadata Data Governance
description: Learn how to connect Unity Catalog to OpenMetadata with our comprehensive connector guide. Setup instructions, configuration tips, and metadata integrat...
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import ExternalIngestionDeployment from '/snippets/v2.0.x-SNAPSHOT/connectors/external-ingestion-deployment.mdx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/databrick.webp'
name="Unity Catalog"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "dbt", "Sample Data", "Owners", "Tags", "Auto-Classification"]}
unavailableFeatures={["Stored Procedures"]} />
In this section, we provide guides and references to use the Unity Catalog connector.

<Info>
**Supported Authentication Types:**
- **Personal Access Token** — Generated token from your Databricks workspace (**User Settings** > **Developer** > **Access Tokens**).
- **Databricks OAuth** — OAuth2 Machine-to-Machine authentication using Service Principal credentials.
- **Azure AD Setup** — Azure Active Directory authentication using Service Principal for Azure Databricks workspaces.
</Info>

Configure and schedule Unity Catalog metadata workflow from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v2.0.x-SNAPSHOT/connectors/ingestion/workflows/metadata/incremental-extraction/unity-catalog)
- [Data Quality](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/quality)
- [Lineage](/v2.0.x-SNAPSHOT/connectors/ingestion/lineage)
- [dbt Integration](/v2.0.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/database/unity-catalog/troubleshooting)

<ExternalIngestionDeployment />

## Requirements

Before configuring the Unity Catalog connector, make sure the following requirements are in place.

### Permission Requirement

To enable full functionality of metadata extraction, profiling, usage, and lineage features in OpenMetadata, the following permissions must be granted to the relevant users in your Databricks environment.

### Metadata and Profiling Permissions

These permissions are required on the catalogs, schemas, and tables from which metadata and profiling information will be ingested.
```sql
GRANT USE CATALOG ON CATALOG <catalog_name> TO `<user>`;
GRANT USE SCHEMA ON SCHEMA <schema_name> TO `<user>`;
GRANT SELECT ON TABLE <table_name> TO `<user>`;
```
Ensure these grants are applied to all relevant tables for metadata ingestion and profiling operations.

### Usage

These permissions enable OpenMetadata to extract query history for usage statistics.
```sql
GRANT SELECT ON SYSTEM.QUERY.HISTORY TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.query TO `<user>`;
```

### Lineage

These permissions enable OpenMetadata to extract table and column-level lineage from Databricks system tables.
```sql
GRANT SELECT ON system.access.table_lineage TO `<user>`;
GRANT SELECT ON system.access.column_lineage TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.access TO `<user>`;
```
For external table lineage (linking tables to their storage locations), the following is also required:
```sql
GRANT SELECT ON system.information_schema.tables TO `<user>`;
```

### Tags

These permissions enable OpenMetadata to extract Unity Catalog tags from catalogs, schemas, tables, and columns.
```sql
GRANT SELECT ON <catalog_name>.information_schema.catalog_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.schema_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.table_tags TO `<user>`;
GRANT SELECT ON <catalog_name>.information_schema.column_tags TO `<user>`;
```

<Tip>
Adjust &lt;user&gt;, &lt;catalog_name&gt;, &lt;schema_name&gt;, and &lt;table_name&gt; according to your specific deployment and security requirements.
</Tip>

## Metadata Ingestion

To ingest metadata from Unity Catalog, you need to create a service connection. The service connects Unity Catalog with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **Unity Catalog** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/unity-catalog.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other Unity Catalog services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/unity-catalog.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for Unity Catalog. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/unity-catalog.png)

**Connection**
- **Host and Port**: Enter the fully qualified hostname and port number for your Databricks deployment in the Host and Port field.
- **HTTP Path**: Databricks compute resources URL.

**Authentication**

Choose one of the following authentication methods:
- **Personal Access Token**: Provide the token generated from your Databricks workspace (**User Settings** > **Developer** > **Access Tokens**).
- **Databricks OAuth**: Provide the Service Principal `Client ID` and `Client Secret` created in your Databricks Account Console.
- **Azure AD Setup**: Provide the `Azure Client ID`, `Azure Client Secret`, and `Azure Tenant ID` from your Azure Active Directory Service Principal.

**Scope & Options**
- **connectionTimeout**: The maximum amount of time (in seconds) to wait for a successful connection to the data source. If the connection attempt takes longer than this timeout period, an error is returned.
- **Catalog**: Catalog of the data source (for example, `hive_metastore`). This is an optional parameter, if you would like to restrict the metadata reading to a single catalog. When left blank, OpenMetadata attempts to scan all catalogs.
- **Database Schema**: Database schema of the data source. This is an optional parameter, if you would like to restrict the metadata reading to a single database schema. When left blank, OpenMetadata attempts to scan all database schemas.

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
